# duckSMILES

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  description.yml  extension_config.cmake  vcpkg.json
.cargo/: config.toml
.github/workflows/: MainDistributionPipeline.yml
cmake/: msvc_fmt_compat.hpp
crates/inchi/: Cargo.toml
crates/inchi/src/: lib.rs  parser.rs
crates/mol/: Cargo.toml
crates/mol/src/: lib.rs  parser.rs
crates/pdb/: Cargo.toml
crates/pdb/src/: cif_parser.rs  lib.rs  pdb_parser.rs  xyz_parser.rs
crates/selfies/: Cargo.toml
crates/selfies/src/: decoder.rs  encoder.rs  lib.rs
crates/smiles/: Cargo.toml
crates/smiles/examples/: maccs_verify.rs
crates/smiles/src/: admet.rs  lib.rs  logp_crippen.rs  maccs.rs  mcs.rs  molhash.rs  morgan.rs  parser.rs  qed.rs  scaffold.rs  similarity.rs  smarts.rs  standardize.rs  tanimoto.rs  test_fixtures.rs  tpsa.rs  weights.rs
crates/smiles/src/conformer/: bounds.rs  embed.rs  minimize.rs  mod.rs  params.rs  smoothing.rs
crates/smiles/src/docking/: affinity.rs  atomtype.rs  benchmark.rs  mod.rs  pdb.rs  pdbqt.rs  pose.rs  protein_prep.rs  score.rs  search.rs  torsion.rs
src/: ducksmiles_extension.cpp  smiles_extension.cpp  smiles_parser.cpp
src/include/: ducksmiles.h  ducksmiles_extension.hpp  smiles_extension.hpp  smiles_parser.hpp
tasks/: phase1_conformer_plan.md
test/data/: changed_functions_verify.sql  inchi.csv  inchikey.csv  selfies.csv  smiles.csv  test_all.sql
test/sql/: ducksmiles.test  smiles_extension.test
